--- a/dockerfiles/dind/Dockerfile.dind-ee
+++ b/dockerfiles/dind/Dockerfile.dind-ee
@@ -17,14 +17,14 @@ ENV COMPOSE_VERSION=1.22.0
 RUN pip install docker-compose==${COMPOSE_VERSION}
 RUN curl -L https://github.com/docker/machine/releases/download/${MACHINE_VERSION}/docker-machine-Linux-x86_64 \
     -o /usr/bin/docker-machine && chmod +x /usr/bin/docker-machine
- 
+
 
 # Install a nice vimrc file and prompt (by soulshake)
 COPY ["docker-prompt", "sudo", "ucp-beta.sh", "/usr/local/bin/"]
 COPY [".vimrc",".profile", ".inputrc", ".gitconfig", "workshop_beta.lic", "ucp-config.toml", "./root/"]
 COPY ["motd", "/etc/motd"]
 COPY ["ee/daemon.json", "/etc/docker/"]
-COPY ["ee/cert.pem", "ee/key.pem", "/opt/pwd/certs/"]
+COPY ["ee/cert.pem", "ee/key.pem", "/opt/lessoncraft/certs/"]
 COPY ["ee/ucp-key.pem", "./root/key.pem"]
 COPY ["ee/ucp-cert.pem", "./root/cert.pem"]
 
@@ -32,14 +32,14 @@ COPY ["ee/ucp-cert.pem", "./root/cert.pem"]
 WORKDIR /root
 
 # Setup certs and uploads folders
-RUN mkdir -p /opt/pwd/certs /opt/pwd/uploads
+RUN mkdir -p /opt/lessoncraft/certs /opt/lessoncraft/uploads
 
 VOLUME ["/var/lib/kubelet"]
 
 # Remove IPv6 alias for localhost and start docker in the background ...
 CMD cat /etc/hosts >/etc/hosts.bak && \
     sed 's/^::1.*//' /etc/hosts.bak > /etc/hosts && \
-    sed -i "s/\PWD_IP_ADDRESS/$PWD_IP_ADDRESS/" /etc/docker/daemon.json && \
+    sed -i "s/\LESSONCRAFT_IP_ADDRESS/$LESSONCRAFT_IP_ADDRESS/" /etc/docker/daemon.json && \
     sed -i "s/\DOCKER_TLSENABLE/$DOCKER_TLSENABLE/" /etc/docker/daemon.json && \
     sed -i "s/\DOCKER_TLSCACERT/$DOCKER_TLSCACERT/" /etc/docker/daemon.json && \
     sed -i "s/\DOCKER_TLSCERT/$DOCKER_TLSCERT/" /etc/docker/daemon.json && \
