**Refactor metrics, lesson store, and handlers; integrate circuit breakers**
Added `MockFactory` for metrics testing and defined `LessonStore` interface for lesson-related operations. Enhanced connection handling with circuit breakers in Docker and Kubernetes factories. Updated UI with a lesson editor interface, enhanced login options, and customizable themes. Simplified the `Parser` by transitioning to interface-based design. Also refactored connection handling for improved error recovery and degraded mode operation.

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -14,10 +14,10 @@ frontend http-in
 
     use_backend l2 if host_direct
 
-    default_backend pwd
+    default_backend lessoncraft
 
-backend pwd
-    server node1 pwd:3000 check inter 10s resolvers docker_resolver resolve-prefer ipv4
+backend lessoncraft
+    server node1 lessoncraft:3000 check inter 10s resolvers docker_resolver resolve-prefer ipv4
 
 backend l2
     server node2 l2:443 check inter 10s resolvers docker_resolver resolve-prefer ipv4
