--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,29 +2,37 @@ on:
   push:
     branches:
       - master
+      - main
   pull_request:
     branches:
       - '**'
 
-name: Go
+name: Go Tests
 jobs:
   test:
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        go_version: ["1.16.0"]
+        go_version: ["1.24.0"]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Install Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.go_version }}
+    - name: Install dependencies
+      run: go mod download
     - name: Generate
       run: go generate ./...
-    - name: Test
-      run: go test ./...
+    - name: Run tests with coverage
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.txt
+        fail_ci_if_error: false
     - name: Verify clean commit
       run: test -z "$(git status --porcelain)" || (git status; git diff; false)
